# hep-programming-hints

./: .gitignore  AGENTS.md  Dockerfile  README.md  awkward-hints.md  demo_trijet_analysis.py  hist-hints.md  hist-limits-advice.md  plan-awkward.md  plan-hist.md  plan-plot.md  plan-servicex.md  pyproject.toml  rdf-hints.md  requirements.txt  servicex-hints.md  servicex-rdf-hints.md  test_trijet_analysis.py  trijet_analysis.py  vector-hints.md  xaod-hints.md  xaod_hints.py
helm/hep-programming-hints/: Chart.yaml  values.yaml
helm/hep-programming-hints/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
hep_programming/: README.md  __init__.py  server.py
hints/: awkward-hints.md  general.md  hist-hints.md  servicex-hints.md  servicex-rdf-hints.md  xaod-hints.md
